--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,7 +1,7 @@
 book_filename: "Basic_Statistics"
 chapter_name: "Chapter "
 repo: https://github.com/ajsmit/Basic_Statistics
-rmd_files: ["index.Rmd", "01-intro.Rmd", "02-data.Rmd", "03-discriptive.Rmd"]
+rmd_files: ["index.Rmd", "01-intro.Rmd", "02-data.Rmd", "03-discriptive.Rmd", "04-graphics.Rmd", "05-distributions.Rmd", "06-t_tests.Rmd", "07-confidence.Rmd", "08-one_way_anova.Rmd", "09-more_anova.Rmd", "10-lme.Rmd", "11-transformations.Rmd", "12-non_param_et_glm.Rmd", "13-chi_squared.Rmd", "14-correlations.Rmd", "15-regressions.Rmd"]
 clean: [packages.bib, bookdown.bbl]
 new_session: yes
 output_dir: "_out"
