--- a/_output.yml
+++ b/_output.yml
@@ -1,22 +1,34 @@
-bookdown::pdf_book:
+bookdown::pdf_document2:
   latex_engine: xelatex
   citation_package: natbib
+  keep_tex: yes
   toc: yes
+  toc_depth: 3
+  toc_unnumbered: no
   fig_caption: yes
   template: LaTeX/default-1.17.0.2.tex
 bookdown::gitbook:
   css: css/style.css
+  dev: svglite
   split_by: chapter
+  config:
+  toc:
+    collapse: subsection
+    before: |
+      <li><a href="./">A Book about Basic Statistics.</a></li>
+    after: |
+      <li><a href="https://github.com/ajsmit/Basic_stats" target="blank">Published with bookdown</a></li>
   toolbar:
     position: fixed
   edit: null
-  download: null
+  download: yes
   search: yes
   fontsettings:
     theme: sepia
     family: serif
     size: 2
   sharing:
+    github: yes
     facebook: no
     twitter: yes
     google: yes
