--- a/.gitignore
+++ b/.gitignore
@@ -6,25 +6,9 @@
 # Session Data files
 .RData
 
-# Example code in package build process
-*-Ex.R
-
-# Output files from R CMD build
-/*.tar.gz
-
-# Output files from R CMD check
-/*.Rcheck/
-
 # RStudio files
 .Rproj.user/
 Basic_stats.Rproj
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
 
 # knitr and R markdown default cache directories
 /*_cache/
@@ -36,5 +20,5 @@ vignettes/*.pdf
 .Rproj.user
 
 # Misc
-/_private/
+_private/
 Basic_stats.code-workspace
