--- a/.gitignore
+++ b/.gitignore
@@ -10,15 +10,10 @@
 .Rproj.user/
 Basic_stats.Rproj
 
-# knitr and R markdown default cache directories
-/*_cache/
-/cache/
-
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
 .Rproj.user
 
 # Misc
-/_private
-Basic_stats.code-workspace
+_private/
